# Libris

./: ARCHITECTURE.md  LICENSE  README.md
backend/: .gitignore  pyproject.toml
frontend/: package-lock.json
